@@ -1,22 +1,24 @@
 package ru.yandex.practicum;
 
-import java.io.BufferedReader;
-import java.io.IOException;
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class WordleDictionaryLoader {
 
-    public static WordleDictionary workingWithFile() throws IOException {
+    public static WordleDictionary workingWithFile(PrintWriter logWriter) throws IOException {
         Path path = Paths.get("words_ru.txt");
 
         if (!Files.exists(path)) {
-            Wordle.log("Файл словаря не найден: " + path.toAbsolutePath());
-            throw new IOException("Файл словаря не найден");
+            log(logWriter, "Файл словаря не найден: " + path.toAbsolutePath());
+            throw new IOException("Файл словаря не найден: " + path.toAbsolutePath());
         }
+
+        log(logWriter, "Загрузка словаря из файла: " + path.toAbsolutePath());
 
         try (BufferedReader reader = Files.newBufferedReader(path, StandardCharsets.UTF_8)) {
             List<String> words = reader.lines()
@@ -25,18 +27,22 @@ public class WordleDictionaryLoader {
                     .filter(word -> word.length() == 5)
                     .map(String::toLowerCase)
                     .map(word -> word.replace('ё', 'е'))
-                    .toList();
+                    .collect(Collectors.toList());
+
+            log(logWriter, "Загружено слов длиной 5 букв: " + words.size());
 
             if (words.isEmpty()) {
-                Wordle.log("В словаре нет слов длиной 5 букв");
-            } else {
-                Wordle.log("Загружено " + words.size() + " слов из файла");
+                log(logWriter, "ПРЕДУПРЕЖДЕНИЕ: В словаре нет слов длиной 5 букв");
             }
 
-            return new WordleDictionary(words);
-        } catch (IOException e) {
-            Wordle.log("Ошибка при чтении файла словаря: " + e.getMessage());
-            throw e;
+            return new WordleDictionary(words, logWriter);
+        }
+    }
+
+    private static void log(PrintWriter logWriter, String message) {
+        if (logWriter != null) {
+            logWriter.println("[WordleDictionaryLoader] " + message);
+            logWriter.flush();
         }
     }
 }
